--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
+numpy = "2.1.3"
+opencv-python = "4.10.0.84"
+pillow = "10.4.0"
 playwright = "1.49.0"
 
 [tool.poetry.group.dev.dependencies]
