--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ pillow = "10.4.0"
 playwright = "1.49.0"
 
 [tool.poetry.group.dev.dependencies]
-ipython = "8.26.0"
+flake8 = ">=7.1,<8"
+ipython = ">=8.19.0,<9"
+mypy = ">=1.13,<2"
 pytest = ">=8.3,<9"
 
 
