--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "2.1.3"
 opencv-python = "4.10.0.84"
 pillow = "10.4.0"
 playwright = "1.49.0"
+SQLAlchemy = "2.0.28"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = ">=7.1,<8"
