--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ opencv-python = "4.10.0.84"
 pillow = "10.4.0"
 playwright = "1.49.0"
 SQLAlchemy = "2.0.28"
+tzlocal = "5.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = ">=7.1,<8"
