--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "2.1.3"
 opencv-python = "4.10.0.84"
 pillow = "10.4.0"
 playwright = "1.49.0"
+pytz = "2023.4"
 schedule = "1.2.2"
 SQLAlchemy = "2.0.28"
 tzlocal = "5.2"
