--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ ipython = ">=8.19.0,<9"
 mypy = ">=1.13,<2"
 pytest = ">=8.3,<9"
 
+[[tool.poetry.source]]
+name = "tsinghua-source"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+
 
 [build-system]
 requires = ["poetry-core"]
