--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,24 @@ services:
       target: dev
       args:
         APT_SOURCE: "https://mirrors.tuna.tsinghua.edu.cn/debian/"
-        PYPI_URL: "https://pypi.tuna.tsinghua.edu.cn/simple"
     image: sgcc-alert:${IMAGE_TAG:-latest}
 
   sgcc-alert-run:
     image: sgcc-alert:${IMAGE_TAG:-latest}
     depends_on:
+      - sgcc-alert-background-task
       - sgcc-alert-homeassistant
     volumes:
       - ./:/app/sgcc-alert/
     ports:
       - "30001:8000"
     command: gunicorn -c gunicorn.conf.py sgcc_alert.app:app
+
+  sgcc-alert-background-task:
+    image: sgcc-alert:${IMAGE_TAG:-latest}
+    volumes:
+      - ./:/app/sgcc-alert/
+    command: python -m sgcc_alert.tasks
 
   sgcc-alert-homeassistant:
     image: homeassistant/home-assistant:stable
