--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
-flask = "3.1.0"
+connexion = {version = "2.14.2", extras = ["swagger-ui"]}
+flask = "2.2.5"
 gunicorn = "20.1.0"
 numpy = "2.1.3"
 opencv-python = "4.10.0.84"
